Criação de novas paginas, organizaçlão dos scripts e styles

--- a/simulacao_1.html
+++ b/simulacao_1.html
@@ -20,7 +20,10 @@
     />
 
     <!-- Link CSS -->
-    <link rel="stylesheet" href="./src/css/style.css" />
+    <link rel="stylesheet" href="src/css/style.css" />
+    <!-- Pagina completa -->
+    <link rel="stylesheet" href="src/css/simu_1.css" />
+    <!-- Fundo e objetos da simulação -->
   </head>
   <body class="bg-dark">
     <!-- Conteiner que engloba todo o projeto -->
@@ -103,7 +106,7 @@
             </div>
             <!-- Inputs fonecidos pelo o usuario -->
             <div class="form-group mx-5 justify-content-md-end" id="inputs">
-              <input type="text" id="tempo">
+              <input type="text" id="tempo" />
               <!-- <input
                 hidden
                 type="number"
@@ -141,6 +144,6 @@
       defer
     ></script>
     <!-- Script javascript -->
-    <script src="src/js/index.js"></script>
+    <script src="src/js/simu_1.js"></script>
   </body>
 </html>
