--- a/simulacao_1.html
+++ b/simulacao_1.html
@@ -19,11 +19,10 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css"
     />
 
-    <!-- Link CSS -->
-    <link rel="stylesheet" href="src/css/style.css" />
     <!-- Pagina completa -->
-    <link rel="stylesheet" href="src/css/simu_1.css" />
+    <!-- <link rel="stylesheet" href="src/css/style.css" /> -->
     <!-- Fundo e objetos da simulação -->
+    <link rel="stylesheet" href="src/css/simu_1.css" />
   </head>
   <body class="bg-dark">
     <!-- Conteiner que engloba todo o projeto -->
