adicionado balao de fala

--- a/simulacao_1.html
+++ b/simulacao_1.html
@@ -37,6 +37,10 @@
           </div>
           <!-- Div onde a simulação ocorre -->
           <div id="game-container" style="display: none">
+            <div class="overlay">
+              <p>Neste RPG, você acompanhará a história do Peba que está a procura de sua amada. Em seu primeiro desafio, o Peba se vê encurralado por uma faminta raposa. Ajude o Peba a fugir!</p>
+              <button id="startLevel" class="btn btn-info">Começar</button>
+            </div>
             <div class="buttons pt-3">
               <button id="reset" class="btn btn-danger">
                 <i class="bi bi-pause"></i> Resetar
