--- a/index.html
+++ b/index.html
@@ -6,6 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cinemática</title>
 </head>
+<style>
+    body{
+        height: 100vh;
+        background-color: rgb(74, 64, 64);
+    }
+    p{
+        padding-top: 50%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+</style>
 <body>
     <p>
         Página inicial!
