--- a/pages/phaseTwo.html
+++ b/pages/phaseTwo.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Fase I - Cinemática</title>
-  <link rel="stylesheet" href="../src/css/phaseThree.css" />
+  <link rel="stylesheet" href="../src/css/phaseTwo.css" />
 </head>
 
 <body class="bg-dark">
@@ -84,6 +84,6 @@
   </main>
 
   <!-- Script javascript -->
-  <script src="../src/js/phaseThree.js"></script>
+  <script src="../src/js/phaseTwo.js"></script>
   <script type="module" src="../node_modules/bootstrap/js/src/modal.js"></script>
 </body>
