renomeação dos arquivos

--- a/index.html
+++ b/index.html
@@ -1,26 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cinemática</title>
-</head>
-<style>
-    body{
-        height: 100vh;
-        background-color: rgb(74, 64, 64);
-    }
-    p{
-        padding-top: 50%;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-    }
-</style>
-<body>
-    <p>
-        Página inicial!
-    </p>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Ciência e tecnologia - aprenda física jogando!</title>
+    <link rel="stylesheet" href="src/css/global.css" />
+  </head>
+  <body>
+    <h3>Página inicial em construção!</h3>
+  </body>
 </html>
